# arcpbf

./: .Rbuildignore  .gitignore  404.html  CRAN-SUBMISSION  DESCRIPTION  LICENSE  LICENSE-text.html  LICENSE.html  NAMESPACE  NEWS.md  README.Rmd  README.md  authors.html  authors.md  cran-comments.md  index.html  index.md  llms.txt  pkgdown.yml  search.json  sitemap.xml
.github/workflows/: R-CMD-check.yaml  cran-fedora-check.yaml  fedora.yaml
R/: extendr-wrappers.R  post-process.R  read.R  resp-body-pbf.R  to-sfc.R
inst/: count.pbf  ids.pbf  small-points.pbf  testing-layers.R
inst/json/: big-pnts.json
inst/pbfs/: big-lines.pbf  big-multipoint.pbf  big-pnts.pbf  features.pbf  ids.pbf  multipatch.pbf  multipoint.pbf  pnts.pbf  small-lines.pbf  small-polys.pbf  small-table.pbf  table.pbf  tst.pbf
man/: arcpbf-package.Rd  httr2.Rd  multi_resp_process.Rd  open_pbf.Rd  post_process_pbf.Rd  process_pbf.Rd  read_pbf.Rd  resp_body_pbf.Rd
news/: index.html  index.md
reference/: arcpbf-package.html  httr2.html  httr2.md  index.html  index.md  multi_resp_process.html  open_pbf.html  open_pbf.md  post_process_pbf.html  post_process_pbf.md  process_pbf.html  process_pbf.md  read_pbf.html  read_pbf.md  resp_body_pbf.html
src/: Makevars  Makevars.in  Makevars.win  Makevars.win.in  arcpbf-win.def  entrypoint.c
src/rust/: Cargo.toml  vendor.tar.xz
src/rust/arcpbf/: Cargo.toml  main.rs
src/rust/arcpbf/src/: geometry.rs  lib.rs  parse.rs  process.rs  sfg.rs  table.rs
src/rust/arcpbf/src/geometry/: mod.rs  point.rs  poly.rs  table.rs
tests/: testthat.R
(+11 files in other folders)
