[package]
name = 'arcpbf'
publish = false
version = '0.1.0'
edition = '2021'

[lib]
crate-type = ['staticlib']
name = 'arcpbf'

[dependencies]
extendr-api = '0.7.0'
esripbf = { path = "../esripbf" }
prost = "0.12.1"
once_cell = "*"
chrono = "*"

[patch.crates-io]
libR-sys = { git = "https://github.com/extendr/libR-sys", rev = "8649204b2490f3aa3732d56f4d84af7f042e5f05" }

[profile.release]

codegen-units = 1
lto = true
